dqFlow updated regarding to O2, version bumped to 12

--- a/configs/configFlowDataRun2.json
+++ b/configs/configFlowDataRun2.json
@@ -138,7 +138,7 @@
         "ccdb-url": "http:\/\/ccdb-test.cern.ch:8080",
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1660516676044",
-        "processQvector":"true",
+        "processBarrelQvector":"true",
         "processDummy":"false"
     },
     "internal-dpl-aod-global-analysis-file-sink": "",
