trackselection interface integration

--- a/configs/configFilterPPDataRun3.json
+++ b/configs/configFilterPPDataRun3.json
@@ -150,6 +150,7 @@
         "processOnlyFT0": "false"
     },
     "track-selection": {
-        "isRun3": "true"
+        "isRun3": "true",
+        "itsMatching": "0"
     }
 }
