--- a/configs/configFilterPPDataRun2.json
+++ b/configs/configFilterPPDataRun2.json
@@ -150,6 +150,7 @@
         "processOnlyFT0": "false"
     },
     "track-selection": {
-        "isRun3": "false"
+        "isRun3": "false",
+        "itsMatching": "0"
     }
 }
