--- a/configs/configTableMakerMCRun2.json
+++ b/configs/configTableMakerMCRun2.json
@@ -140,7 +140,8 @@
         "processOnlyFT0": "false"
     },
     "track-selection": {
-        "isRun3": "false"
+        "isRun3": "false",
+        "itsMatching": "0"
     },
     "table-maker-m-c": {
         "cfgEventCuts": "eventStandardNoINT7",
