--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,8 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
-      - uses: psf/black@stable
         with:
-          options: "--check --verbose -l 100"
+          options: "--check --verbose --line-length 100"
           src: "./src"
           version: "21.5b1"
