--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
+      - uses: psf/black@stable
         with:
           options: "--check --verbose --line-length 100"
           src: "./src"
