length remove for test

--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: psf/black@stable
       - uses: psf/black@stable
         with:
-          options: "--check --verbose --line-length 100"
+          options: "--check --verbose"
           src: "./src"
           version: "21.5b1"
