--- a/configs/configFilterPPDataRun3.json
+++ b/configs/configFilterPPDataRun3.json
@@ -151,6 +151,10 @@
     },
     "track-selection": {
         "isRun3": "true",
-        "itsMatching": "1"
+        "itsMatching": "1",
+        "ptMin": "0.1",
+        "ptMax": "1e+10",
+        "etaMin": "-0.8",
+        "etaMax": "0.8"
     }
 }
