--- a/configs/configFlowDataRun2.json
+++ b/configs/configFlowDataRun2.json
@@ -38,7 +38,11 @@
     },
     "track-selection": {
         "isRun3": "false",
-        "itsMatching": "0"
+        "itsMatching": "0",
+        "ptMin": "0.1",
+        "ptMax": "1e+10",
+        "etaMin": "-0.8",
+        "etaMax": "0.8"
     },
     "event-selection-task": {
         "syst": "PbPb",
