--- a/configs/configTableMakerMCRun3.json
+++ b/configs/configTableMakerMCRun3.json
@@ -135,7 +135,11 @@
     },
     "track-selection": {
         "isRun3": "true",
-        "itsMatching": "1"
+        "itsMatching": "1",
+        "ptMin": "0.1",
+        "ptMax": "1e+10",
+        "etaMin": "-0.8",
+        "etaMax": "0.8"
     },
     "table-maker-m-c": {
         "cfgEventCuts": "eventStandardNoINT7",
