New vertexing process func. integration, dilepton barrel tables will added

--- a/configs/configAnalysisMC.json
+++ b/configs/configAnalysisMC.json
@@ -38,6 +38,7 @@
         "cfgBarrelMCGenSignals": "Jpsi",
         "cfgFlatTables": "false",
         "processJpsiToEESkimmed": "true",
+        "processJpsiToEEVertexingSkimmed": "false",
         "processJpsiToMuMuSkimmed": "false",
         "processJpsiToMuMuVertexingSkimmed": "false",
         "processDummy": "false"
