Add Configurables to TableMaker(MC), related to latest changes in TableMaker(MC)

--- a/configs/configTableMakerDataRun3.json
+++ b/configs/configTableMakerDataRun3.json
@@ -218,8 +218,11 @@
         "cfgMuonLowPt": "0.5",
         "cfgMinTpcSignal": "50",
         "cfgMaxTpcSignal": "200",
-        "cfgNoQA": "false",
+        "cfgQA": "true",
         "cfgDetailedQA": "true",
+        "cfgAddEventHistogram": "",
+        "cfgAddTrackHistogram": "",
+        "cfgAddMuonHistogram": "",
         "cfgIsRun2": "false",
         "cfgIsAmbiguous": "false",
         "processFull": "false",
