--- a/configs/configTableMakerMCRun3.json
+++ b/configs/configTableMakerMCRun3.json
@@ -156,8 +156,12 @@
         "cfgMaxTpcSignal": "300",
         "cfgMCsignals": "electronPrimary,eFromJpsi,muFromJpsi,eFromLMeeLF,LMeeLF,Jpsi",
         "cfgIsRun2": "false",
-        "cfgNoQA": "false",
+        "cfgQA": "true",
         "cfgDetailedQA": "false",
+        "cfgAddEventHistogram": "",
+        "cfgAddTrackHistogram": "",
+        "cfgAddMuonHistogram": "",
+        "cfgAddMCTruthHistogram": "",
         "processFull": "false",
         "processFullWithCov": "false",
         "processBarrelOnly": "false",
