new histogram configurables integrated to user interface (will be improved)

--- a/configs/configTableMakerDataRun2.json
+++ b/configs/configTableMakerDataRun2.json
@@ -218,8 +218,11 @@
         "cfgMuonLowPt": "0.5",
         "cfgMinTpcSignal": "30",
         "cfgMaxTpcSignal": "300",
-        "cfgNoQA": "false",
+        "cfgQA": "true",
         "cfgDetailedQA": "true",
+        "cfgAddEventHistogram": "triggerall,cent",
+        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid",
+        "cfgAddMuonHistogram": "muon",
         "cfgIsRun2": "true",
         "cfgIsAmbiguous": "false",
         "processFull": "false",
