--- a/configs/configTableMakerMCRun2.json
+++ b/configs/configTableMakerMCRun2.json
@@ -156,8 +156,12 @@
         "cfgMaxTpcSignal": "300",
         "cfgMCsignals": "eFromJpsi,muFromJpsi,Jpsi,phiMeson",
         "cfgIsRun2": "true",
-        "cfgNoQA": "false",
+        "cfgQA": "true",
         "cfgDetailedQA": "true",
+        "cfgAddEventHistogram": "triggerall,cent,mc",
+        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid,mc",
+        "cfgAddMuonHistogram": "muon,mc",
+        "cfgAddMCTruthHistogram": "",
         "processFull": "false",
         "processFullWithCov": "false",
         "processBarrelOnly": "false",
