--- a/configs/configTableMakerMCRun3.json
+++ b/configs/configTableMakerMCRun3.json
@@ -158,9 +158,9 @@
         "cfgIsRun2": "false",
         "cfgQA": "true",
         "cfgDetailedQA": "false",
-        "cfgAddEventHistogram": "",
-        "cfgAddTrackHistogram": "",
-        "cfgAddMuonHistogram": "",
+        "cfgAddEventHistogram": "triggerall,cent,mc",
+        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid,mc",
+        "cfgAddMuonHistogram": "muon,mc",
         "cfgAddMCTruthHistogram": "",
         "processFull": "false",
         "processFullWithCov": "false",
