--- a/configs/configTableMakerDataRun3.json
+++ b/configs/configTableMakerDataRun3.json
@@ -220,9 +220,9 @@
         "cfgMaxTpcSignal": "200",
         "cfgQA": "true",
         "cfgDetailedQA": "true",
-        "cfgAddEventHistogram": "",
-        "cfgAddTrackHistogram": "",
-        "cfgAddMuonHistogram": "",
+        "cfgAddEventHistogram": "triggerall,cent",
+        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid",
+        "cfgAddMuonHistogram": "muon",
         "cfgIsRun2": "false",
         "cfgIsAmbiguous": "false",
         "processFull": "false",
