Maintaince: Ambigious Tracks, barrel cov table added for tableReader, fixing fwdtrackextension task issue for processFull in tableMaker/tableMakerMC

--- a/configs/configTableMakerDataRun2.json
+++ b/configs/configTableMakerDataRun2.json
@@ -239,6 +239,8 @@
         "processMuonOnly": "false",
         "processMuonOnlyWithQvector": "false",
         "processMuonOnlyWithFilter": "false",
+        "processAmbiguousMuonOnly": "false",
+        "processAmbiguousBarrelOnly": "false",
         "processOnlyBCs": "true"
     },
     "internal-dpl-aod-global-analysis-file-sink": "",
