--- a/configs/configAnalysisMCEMNoSkimmed.json
+++ b/configs/configAnalysisMCEMNoSkimmed.json
@@ -73,6 +73,7 @@
     },
     "tof-signal": "",
     "track-extension": {
+        "compatibilityIU": "false",
         "processRun2": "false",
         "processRun3": "true"
     },
@@ -107,6 +108,8 @@
         "tof-expreso": "80"
     },
     "tof-event-time": {
+        "minMomentum": "0.5",
+        "maxMomentum": "2.0",
         "param-file": "",
         "param-sigma": "TOFReso",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
@@ -118,11 +121,16 @@
         "processOnlyFT0": "false"
     },
     "track-selection": {
-        "isRun3": "true"
+        "compatibilityIU": "false",
+        "isRun3": "true",
+        "itsMatching": "1",
+        "ptMin": "0.1",
+        "ptMax": "1e+10",
+        "etaMin": "-0.8",
+        "etaMax": "0.8"
     },
     "multiplicity-table": {
-        "doVertexZeq": "0",
-        "doDummyZeq": "1",
+        "doVertexZeq": "1",
         "processRun2": "false",
         "processRun3": "true"
     },
