--- a/configs/configAnalysisData.json
+++ b/configs/configAnalysisData.json
@@ -22,21 +22,21 @@
     "analysis-track-selection": {
         "cfgTrackCuts": "jpsiO2MCdebugCuts",
         "cfgQA": "true",
-        "cfgAddTrackHistogram": "",
+        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid",
         "processSkimmed": "true",
         "processDummy": "false"
     },
     "analysis-muon-selection": {
         "cfgMuonCuts": "muonQualityCuts",
         "cfgQA": "true",
-        "cfgAddMuonHistogram": "",
+        "cfgAddMuonHistogram": "muon",
         "processSkimmed": "true",
         "processDummy": "false"
     },
     "analysis-event-mixing": {
         "cfgTrackCuts": "jpsiO2MCdebugCuts2",
         "cfgMuonCuts": "muonQualityCuts",
-        "cfgAddEventMixingHistogram": "",
+        "cfgAddEventMixingHistogram": "trigger,cent,muon",
         "cfgMixingDepth": "1",
         "processBarrelSkimmed": "false",
         "processMuonSkimmed": "false",
@@ -48,7 +48,7 @@
     "analysis-same-event-pairing": {
         "cfgTrackCuts": "jpsiO2MCdebugCuts",
         "cfgMuonCuts": "muonQualityCuts",
-        "cfgAddSEPHistogram": "",
+        "cfgAddSEPHistogram": "barrel,vertexing,flow",
         "ccdb-url": "http:\/\/ccdb-test.cern.ch:8080",
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1638360910432",
