tableMakerMC naming conv. set according to O2Physics#1534

--- a/configs/readerConfiguration_reducedEventMC.json
+++ b/configs/readerConfiguration_reducedEventMC.json
@@ -51,11 +51,11 @@
         "treename": "ReducedMuonsCov"
       },
       {
-        "table": "AOD/REMC/0",
+        "table": "AOD/REDUCEDMCEVENT/0",
         "treename": "ReducedMCEvents"
       },
       {
-        "table": "AOD/RTMC/0",
+        "table": "AOD/REDUCEDMCTRACK/0",
         "treename": "ReducedMCTracks"
       },
       {
