--- a/configs/configV0SelectorDataRun3.json
+++ b/configs/configV0SelectorDataRun3.json
@@ -79,6 +79,8 @@
     "v0-selector": {
         "d_bz_input": "-999",
         "v0cospa": "0.998",
+        "v0max_mee" : "0.06",
+        "maxpsipair" : "0.3",
         "dcav0dau": "0.3",
         "v0Rmin": "0",
         "v0Rmax": "90.0",
