--- a/configs/configTableMakerDataRun3.json
+++ b/configs/configTableMakerDataRun3.json
@@ -93,8 +93,18 @@
         "geoPath": "GLO\/Config\/GeometryAligned",
         "grpmagPath": "GLO/Config/GRPMagField"
     },
-    "track-pid-qa": "",
-    "v0-gamma-qa": "",
+    "track-pid-qa": {
+        "dcamin": "0",
+        "dcamax": "1e+10",
+        "mincrossedrows": "70",
+        "maxchi2tpc": "4",
+        "processQA": "true",
+        "processDummy": "false"
+    },
+    "v0-gamma-qa": {
+        "processNM": "false",
+        "processDummy": "true"
+    },
     "tof-pid": {
         "param-file": "",
         "param-sigma": "TOFResoParams",
