dalitz bitz activated for tableMaker

--- a/configs/readerConfiguration_reducedEvent.json
+++ b/configs/readerConfiguration_reducedEvent.json
@@ -40,6 +40,9 @@
       },
       {
         "table": "AOD/AMBIGUOUSFWDTR/0",
+      },
+      {
+        "table": "AOD/DALITZBITS/0",
       }
     ]
   }
