More developments for encapsulation and code quaility improvement, update json files based on DQ framework updates

--- a/configs/configTableMakerDataRun3.json
+++ b/configs/configTableMakerDataRun3.json
@@ -254,6 +254,9 @@
         "cfgAddMuonHistogram": "muon",
         "cfgIsRun2": "false",
         "cfgIsAmbiguous": "false",
+        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "ccdb-path-tpc": "Users\/i\/iarsene\/Calib\/TPCpostCalib",
+        "cfgTPCpostCalib": "false",
         "processFull": "false",
         "processFullWithCov": "false",
         "processFullWithCent": "false",
