--- a/configs/configAnalysisData.json
+++ b/configs/configAnalysisData.json
@@ -23,15 +23,15 @@
         "cfgTrackCuts": "jpsiO2MCdebugCuts",
         "cfgDalitzCutId": "32",
         "cfgQA": "true",
-        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid,postcalib_electron,postcalib_pion,postcalib_proton",
+        "cfgAddTrackHistogram": "dca,its,tpcpid,tofpid",
+        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "ccdb-path-tpc": "Users\/i\/iarsene\/Calib\/TPCpostCalib",
+        "cfgTPCpostCalib": "false",
         "processSkimmed": "true",
         "processDummy": "false"
     },
     "analysis-prefilter-selection": {
-        "cfgDalitzTrackCutsId": "",
-        "cfgDalitzPairCuts": "",
-        "cfgAddTrackPairHistogram": "",
-        "cfgQA": "true",
+        "cfgPrefilterPairCut": "",
         "processBarrelSkimmed": "false",
         "processDummy": "true"
     },
@@ -58,7 +58,7 @@
         "cfgTrackCuts": "jpsiO2MCdebugCuts",
         "cfgMuonCuts": "muonQualityCuts",
         "cfgAddSEPHistogram": "barrel,vertexing,flow",
-        "ccdb-url": "http:\/\/ccdb-test.cern.ch:8080",
+        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1638360910432",
         "processDecayToEESkimmed": "true",
