--- a/configs/configFlowDataRun2.json
+++ b/configs/configFlowDataRun2.json
@@ -147,6 +147,7 @@
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1660516676044",
         "processBarrelQvector":"true",
+        "processForwardQvector": "false",
         "processDummy":"false"
     },
     "internal-dpl-aod-global-analysis-file-sink": "",
