--- a/configs/configFlowDataRun3.json
+++ b/configs/configFlowDataRun3.json
@@ -137,8 +137,10 @@
         "cfgQA": "true",
         "cfgCutPtMin": "0.2",
         "cfgCutPtMax": "12",
-        "cfgCutEta": "0.8",
-        "cfgEtaLimit": "0.4",
+        "cfgCutEtaMin": "-0.8",
+        "cfgCutEtaMax": "0.8",
+        "cfgEtaLimitMin": "-0.4",
+        "cfgEtaLimitMax": "0.4",
         "cfgNHarm": "2",
         "cfgNPow": "0",
         "cfgEfficiency": "",
