--- a/src/configs/writerConfiguration_dileptonMC.json
+++ b/src/configs/writerConfiguration_dileptonMC.json
@@ -22,6 +22,21 @@
       },
       {
         "table": "AOD/RTMUONCOV/0"
+      },
+      {
+        "table": "AOD/REDUCEDTRACK/0",
+      },
+      {
+        "table": "AOD/RTBARREL/0",
+      },
+      {
+        "table": "AOD/RTBARRELCOV/0",
+      },
+      {
+        "table": "AOD/RTBARRELPID/0",
+      },
+      {
+        "table": "AOD/RTBARRELLABELS/0",
       },   
       {
         "table": "AOD/REDUCEDMCEVENT/0"
