--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,25 +1,17 @@
-name: Python Linter (Flake 8)
+name: flake8 Lint
 
-on:
-  push:
-    paths:
-      - "**.py"
+on: [push, pull_request]
 
 jobs:
-  lint:
-    name: Python Lint
+  flake8-lint:
     runs-on: ubuntu-latest
+    name: Lint
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Check out source repository
+        uses: actions/checkout@v3
+      - name: Set up Python environment
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
-      - name: Run flake8
-        uses: julianwachholz/flake8-action@v2
-        with:
-          checkName: "Python Lint"
-          path: path/to/files
-          plugins: flake8-spellcheck
-          config: path/to/flake8.ini
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          python-version: "3.11"
+      - name: flake8 Lint
+        uses: py-actions/flake8@v2
