--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -10,6 +10,8 @@ jobs:
 
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
+      with:
+        docs-folder: "html/"
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
