--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -11,17 +11,17 @@ jobs:
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
       with:
-        docs-folder: "html/"
+        docs-folder: "docs/"
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
         name: html-docs
-        path: html/build/html/
+        path: docs/build/html/
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: html/build/html
+        publish_dir: docs/build/html
