--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -11,7 +11,7 @@ jobs:
           pip install sphinx sphinx_rtd_theme
       - name: Sphinx build
         run: |
-          sphinx-apidoc -o docs PythonInterfaceOOP/
+          sphinx-apidoc -o docs/source PythonInterfaceOOP/
           sphinx-build docs/source build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
