--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -9,6 +9,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme
+          pip install argcomplete
       - name: Sphinx build
         run: |
           sphinx-apidoc -o docs/source PythonInterfaceOOP/
