--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
+          pip install autodocsumm
           pip install sphinx sphinx_rtd_theme
           pip install argcomplete
       - name: Sphinx build
